# jaxon

./: Cargo.toml  README.md  go.mod  go.sum  jaxon.toml  main.go  products.json
.github/workflows/: release.yml
.zed/: settings.json
cmd/: init.go  root.go  sync.go
internal/: code.go  config.go  json.go  lock.go  request.go
src/: cli.rs  code.rs  config.rs  lock.rs  main.rs  products.rs
src/Shared/: Products.luau
src/commands/: init.rs  sync.rs
src/roblox/: api.rs  mod.rs
