[package]
name = "jaxon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
dotenvy = "0.15.7"
governor = "0.10.4"
hex = "0.4.3"
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
toml = "1.0.3"
